manifests/base/webhook/service.yaml
#
# Copyright 2024 The Kubeflow Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: v1
kind: Service
metadata:
  name: kubeflow-trainer-webhook-service
  namespace: kubeflow-system
  labels:
    app.kubernetes.io/name: kubeflow-trainer
    app.kubernetes.io/instance: kubeflow-trainer
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/component: webhook
spec:
  selector:
    app.kubernetes.io/name: kubeflow-trainer
    app.kubernetes.io/instance: kubeflow-trainer
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/component: manager
  ports:
    - name: webhook-server
      port: 443
      protocol: TCP
      targetPort: 9443
