manifests/base/webhook/validatingwebhookconfiguration.yaml
#
# Copyright 2024 The Kubeflow Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# Source: kubeflow-trainer/templates/webhook/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validator.trainer.kubeflow.org
  labels:
    helm.sh/chart: kubeflow-trainer-2.0.0
    app.kubernetes.io/name: kubeflow-trainer
    app.kubernetes.io/instance: kubeflow-trainer
    app.kubernetes.io/version: "2.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/component: webhook
webhooks:
  - name: validator.clustertrainingruntime.trainer.kubeflow.org
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kubeflow-trainer-controller-manager
        namespace: kubeflow-system
        path: /validate-trainer-kubeflow-org-v1alpha1-clustertrainingruntime
    sideEffects: None
    failurePolicy: Fail
    rules:
      - apiGroups:
          - trainer.kubeflow.org
        apiVersions:
          - v1alpha1
        resources:
          - clustertrainingruntimes
        operations:
          - CREATE
          - UPDATE
  - name: validator.trainingruntime.trainer.kubeflow.org
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kubeflow-trainer-controller-manager
        namespace: kubeflow-system
        path: /validate-trainer-kubeflow-org-v1alpha1-trainingruntime
    sideEffects: None
    failurePolicy: Fail
    rules:
      - apiGroups:
          - trainer.kubeflow.org
        apiVersions:
          - v1alpha1
        resources:
          - trainingruntimes
        operations:
          - CREATE
          - UPDATE
  - name: validator.trainjob.trainer.kubeflow.org
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kubeflow-trainer-controller-manager
        namespace: kubeflow-system
        path: /validate-trainer-kubeflow-org-v1alpha1-trainjob
    sideEffects: None
    failurePolicy: Fail
    rules:
      - apiGroups:
          - trainer.kubeflow.org
        apiVersions:
          - v1alpha1
        resources:
          - trainjobs
        operations:
          - CREATE
          - UPDATE
